# anidl

./: .gitignore  README.md  docs.md  install.ps1  pyproject.toml
anidl/: __init__.py  cli.py  config.py  downloader.py  parser.py  queue.py  sources.py  utils.py
scripts/: debug_parse.py
tests/: test_cli.py  test_cli_integration.py  test_cli_queue.py  test_downloader.py  test_history.py  test_parser.py
